JPUI-3 | Fixed PlayWizardFooter Dynamic Alignment

--- a/src/styles/sass/components/layout/wizard/play/PlayWizardFooter.module.scss
+++ b/src/styles/sass/components/layout/wizard/play/PlayWizardFooter.module.scss
@@ -6,4 +6,5 @@
 
 .next {
   padding: 3px 10px;
+  align-self: flex-end;
 }
